--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
+# quarkus Configuration
+###############################################
+# quarkus Database Configuration
 quarkus.datasource.devservices.port=9999
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+###############################################
+# quarkus Log Configuration
+quarkus.log.level=INFO
+# quarkus.log.category."io.quarkus".level=WARN
+# quarkus.log.category."de.hsos.swa".level=WARN
+# Log to the console
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+quarkus.log.console.level=INFO
+quarkus.log.console.async=true
+
+# Log to a file
+quarkus.log.file.enable=true
+quarkus.log.file.path=app.log
+quarkus.log.file.level=TRACE
+quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+quarkus.log.file.async=true
