feat: added path for root resource in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # quarkus Configuration
+quarkus.http.root-path=/theateros/api
 ###############################################
 # quarkus Database Configuration
 quarkus.datasource.devservices.port=9999
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 
 ###############################################
 # quarkus Log Configuration
