chore: added openapi definition in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 # quarkus Configuration
 quarkus.http.root-path=/theateros/api
+quarkus.http.non-application-root-path=/theateros/api
+quarkus.smallrye-openapi.path=/swagger
+
+###############################################
+# OpenAPI Definition
+quarkus.smallrye-openapi-info.title=TheaterOS API
+%dev.quarkus.smallrye-openapi.info-title=TheaterOS API (development)
+%test.quarkus.smallrye-openapi.info-title=TheaterOS API (test)
+quarkus.smallrye-openapi.info-version=1.0.1
+quarkus.smallrye-openapi.info-description=A service to plan visits to the theatre
+quarkus.smallrye-openapi.info-terms-of-service=Your terms here
+quarkus.smallrye-openapi.info-contact-email=support@theater-os.de
+quarkus.smallrye-openapi.info-contact-name=Jonas Nelson
+quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
+#quarkus.smallrye-openapi.info-license-name=ausstehend
+#quarkus.smallrye-openapi.info-license-url=ausstehend
+
 ###############################################
 # quarkus Database Configuration
 quarkus.datasource.devservices.port=9999
