chore: disabled terms-of-service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quarkus.smallrye-openapi-info.title=TheaterOS API
 %test.quarkus.smallrye-openapi.info-title=TheaterOS API (test)
 quarkus.smallrye-openapi.info-version=1.0.1
 quarkus.smallrye-openapi.info-description=A service to plan visits to the theatre
-quarkus.smallrye-openapi.info-terms-of-service=Your terms here
+#quarkus.smallrye-openapi.info-terms-of-service=ausstehend
 quarkus.smallrye-openapi.info-contact-email=support@theater-os.de
 quarkus.smallrye-openapi.info-contact-name=Jonas Nelson
 quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
