--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ quarkus.log.level=INFO
 # quarkus.log.category."de.hsos.swa".level=WARN
 # Log to the console
 quarkus.log.console.enable=true
-quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}:%L]] (%t) %s%e%n
 quarkus.log.console.level=INFO
 quarkus.log.console.async=true
 
@@ -38,5 +38,5 @@ quarkus.log.console.async=true
 quarkus.log.file.enable=true
 quarkus.log.file.path=app.log
 quarkus.log.file.level=TRACE
-quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}]] (%t) %s%e%n
+quarkus.log.file.format=%d{HH:mm:ss} %-5p [%c{2.}:%L]] (%t) %s%e%n
 quarkus.log.file.async=true
