--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>jsoup</artifactId>
             <version>1.16.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-qute</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
