--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
 quarkus.datasource.devservices.port=9999
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=update
+--quarkus.hibernate-orm.database.generation=drop-and-create
 
 ###############################################
 # quarkus Log Configuration
