fix: uncommented quarkus.http.root-path -> couldn't find stylesheet.css

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # quarkus Configuration
-quarkus.http.root-path=/theateros/api
+#quarkus.http.root-path=/theateros/api
 quarkus.http.non-application-root-path=/theateros/api
 quarkus.smallrye-openapi.path=/swagger
+#quarkus.resteasy.path=/api
 
 ###############################################
 # OpenAPI Definition
