--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
 quarkus.datasource.devservices.port=9999
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=update
---quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=drop-and-create
 
 ###############################################
 # quarkus Log Configuration
