feat: added http form authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,25 @@ quarkus.hibernate-orm.database.generation=update
 #quarkus.hibernate-orm.database.generation=drop-and-create
 
 ###############################################
+# quarkus Authentification
+quarkus.http.auth.form.enabled=true
+#Paths
+quarkus.http.auth.form.login-page=/login
+quarkus.http.auth.form.landing-page=/deins
+#Formularfelder
+quarkus.http.auth.form.username-parameter=j_username
+quarkus.http.auth.form.password-parameter=j_password
+#Cookiesettings
+#quarkus.http.auth.form.cookie-name=quarkus-credential
+#quarkus.http.auth.form.cookie-path=/
+#quarkus.http.auth.form.http-only-cookie=false
+#quarkus.http.auth.form.cookie-same-site=strict
+#Inaktivität nach 30 Minuten
+#quarkus.http.auth.form.timeout=PT30M
+#quarkus.http.auth.form.new-cookie-interval=PT1M
+
+#quarkus.http.auth.session.encryption-key=0g?3Adwch%baks*wH^Eg
+###############################################
 # quarkus Log Configuration
 quarkus.log.level=INFO
 # quarkus.log.category."io.quarkus".level=WARN
