chore: changed CredentialCookie-Name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ quarkus.http.auth.form.landing-page=/mobile/deins
 quarkus.http.auth.form.username-parameter=j_username
 quarkus.http.auth.form.password-parameter=j_password
 #Cookiesettings
-#quarkus.http.auth.form.cookie-name=quarkus-credential
+quarkus.http.auth.form.cookie-name=theater-os-credential
 #quarkus.http.auth.form.cookie-path=/
 #quarkus.http.auth.form.http-only-cookie=false
 #quarkus.http.auth.form.cookie-same-site=strict
