feat: added test to test EventResourceApi chore: disabled setting the port of devservices via application.properties chore: deleted standard test classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
 
 ###############################################
 # quarkus Database Configuration
-quarkus.datasource.devservices.port=9999
+#quarkus.datasource.devservices.port=13829
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=update
 #quarkus.hibernate-orm.database.generation=drop-and-create
