--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ quarkus.smallrye-openapi.info-contact-url=https://theater-os.de/contact
 # quarkus Database Configuration
 #quarkus.datasource.devservices.port=13829
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.database.generation=update
-#quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 ###############################################
 # quarkus Authentification
